--- a/02-BASES/package.json
+++ b/02-BASES/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "dev":"nodemon src/app.js"
+    "dev": "nodemon src/app.js"
   },
   "author": "Roy Cabrera",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "axios": "^1.13.2",
+    "get-age": "^1.0.1",
+    "uuid": "^13.0.0"
   }
 }
